--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
   right: -10%;
   bottom: -10%;
   background-image: url('https://png.pngtree.com/background/20211217/original/pngtree-noise-abstract-texture-dark-gray-noise-background-picture-image_1575837.jpg');
-  background-size: fill;
+  background-size: contain;
   background-repeat: repeat;
   background-position: center;
   z-index: 1;
@@ -30,61 +30,70 @@
 .background-gradient > * {
   position: relative;
   z-index: 2;
+
+  
 }
 
 
+
 .primary-bg {
-    background:'#F8F5EF';   
-    background-size: cover;
-    position: relative;
-    
-  }
-  
-  .primary-bg:before {
-    content: '';
-    opacity: 0.05; 
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: url('https://png.pngtree.com/background/20211217/original/pngtree-noise-abstract-texture-dark-gray-noise-background-picture-image_1575837.jpg');
-    background-size: fill;
-    background-repeat: repeat;
-  }
+  background: '#F8F5EF';
+  background-size: cover;
+  position: relative;
+  overflow: hidden; /* Add this line to clip the pseudo-element */
+}
+.primary-bg::before {
+  content: '';
+  opacity: 0.1;
+  position: absolute;
+  top: -10%;
+  left: -10%;
+  right: -10%;
+  bottom: -10%;
+  background-image: url('https://png.pngtree.com/background/20211217/original/pngtree-noise-abstract-texture-dark-gray-noise-background-picture-image_1575837.jpg');
+  background-size: contain;
+  background-repeat: repeat;
+  background-position: center;
+  z-index: 1;
+  pointer-events: none;
+}
+
+.primary-bg  > * {
+  position: relative;
+  z-index: 2;
+}
 
 
 
-  .background-gradient-black {
-    background: linear-gradient(to bottom right, #141414, #9966FF);   
-    background-size: cover;
-    position: relative;
-    z-index: 1; /* Change this to a lower value */
- 
-  }
-  
-  .background-gradient-black::before {
-    content: '';
-    opacity: 0.1; 
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-image: url('https://png.pngtree.com/background/20211217/original/pngtree-noise-abstract-texture-dark-gray-noise-background-picture-image_1575837.jpg');
-    background-size: fill;
-    background-repeat: repeat;
-    z-index: -1; /* Add this line to place it behind the content */
-    pointer-events: none; /* Add this line to allow clicks to pass through */
-    border-radius: 5%;
+.background-gradient-black  {
+  background: linear-gradient(to bottom right, #141414, #9966FF);   
+  background-size: cover;
+  position: relative;
+  overflow: hidden; /* Add this line to clip the pseudo-element */
+}
+.background-gradient-black::before {
+  content: '';
+  opacity: 0.1;
+  position: absolute;
+  top: -10%;
+  left: -10%;
+  right: -10%;
+  bottom: -10%;
+  background-image: url('https://png.pngtree.com/background/20211217/original/pngtree-noise-abstract-texture-dark-gray-noise-background-picture-image_1575837.jpg');
+  background-size: contain;
+  background-repeat: repeat;
+  background-position: center;
+  z-index: 1;
+  pointer-events: none;
+}
 
-  }
-  
-  /* Add this new rule for the content inside the div */
-  .background-gradient-black > * {
-    position: relative;
-    z-index: 2;
-  }
+.background-gradient-black   > * {
+  position: relative;
+  z-index: 2;
+}
+
+
+
 
 
   .background-gradient-blue {
